When union_lookup() creates a shadow directory and nameiop is not LOOKUP it has to restart the lookup to get the componentname right.

Fixes PR #44383 (an endless stream of whiteout and opaque dir problems ...)